+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.1c2?
=============================

*Release date: 17-MAR-2005*

Library
-------

- Bug #1163325:  Decimal infinities failed to hash.  Attempting to
  hash a NaN raised an InvalidOperation instead of a TypeError.

- Bug #1160802: can't build Zope on Windows with 2.4.1c1.  The
  ``MSVCCompiler`` class in distutils forgot to record that it was
  initialized, and continued adding redundant entries to the system
  ``PATH`` environment variable until ``putenv()`` complained about the
  size.  This only affected building projects with many C extensions,
  and only on Windows using Microsoft's compiler.  This wasn't visible
  before because a bugfix first included in 2.4.1c1 provoked it (bug
  #1110478: revert os.environ.update to do putenv again).

- Bug #1156259: Seeking in codecs.reader was broken, now fixed.

Tests
-----

- Fix the test for socket.getfqdn() in test_socket to also consider the host
  name returned by socket.gethostname() a valid return value for getfqdn().
  Also clarified the wording of docs and docstring that this is the case.

Extensions Modules
------------------

- os.access now supports Unicode path names on non-Win32 systems.


What's New in Python 2.4.1c1?
=============================

*Release date: 10-MAR-2005*

Core and builtins
-----------------

- Bug #1155938: new style classes did not verify that __init__()
  returns None.

- Bug #723201: Raise a TypeError for passing bad objects to 'L' format.

- Bug #1124295: the __name__ attribute of file objects was
  inadvertently made inaccessible in restricted mode.

- Bug #1074011: closing sys.std{out,err} now causes a flush() and
  an ferror() call.

- Bug #1085744:  Add missing overflow check to PySequence_Tuple().
  Make resize schedule linear (amortized).

- marshal.dumps() no longer crashes when the optional argument ``version``
  is provided.

